--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,10 @@ venv.bak/
 # eclipse project stuff
 .*project
 
-# data that aren't zips or csv's
-FBG_Needle_Calibration_Data/
-!FBG_Needle_Calibration_Data/needle_1/*.zip
-!FBG_Needle_Calibration_Data/*.csv
+# data that are just too big
+FBG_Needle_Calibration_Data/needle_1/12-09-19*
+
+#FBG_Needle_Calibration_Data/
+#!FBG_Needle_Calibration_Data/needle_1/*.zip
+#!FBG_Needle_Calibration_Data/*.csv
 
