--- a/.gitignore
+++ b/.gitignore
@@ -108,8 +108,5 @@ venv.bak/
 
 # data that are just too big
 FBG_Needle_Calibration_Data/needle_1/12-09-19*
-
-#FBG_Needle_Calibration_Data/
-#!FBG_Needle_Calibration_Data/needle_1/*.zip
-#!FBG_Needle_Calibration_Data/*.csv
+!FBG_Needle_Calibration_Data/needle_1/*.zip
 
