--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ venv.bak/
 FBG_Needle_Calibration_Data/needle_1/12-09-19*
 !FBG_Needle_Calibration_Data/needle_1/*.zip
 FBG_Needle_Calibration_Data/*/~*.xlsx
+
+# matlab autosave files
+*.asv
