--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,13 @@
-actionlib==1.11.16
-angles==1.9.12
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.2.0
-backcall==0.2.0
-base-local-planner==1.14.8
-bleach==3.2.1
-bondpy==1.8.3
-camera-calibration-parsers==1.11.13
-catkin==0.7.29
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-Click==7.0
-controller-manager==0.13.5
-controller-manager-msgs==0.13.5
-controller-manager-tests==0.13.5
-cryptography==2.9
-cv-bridge==1.12.8
-cycler==0.10.0
-Cython==0.29.21
-decorator==4.4.0
-defusedxml==0.6.0
-Deprecated==1.2.4
-diagnostic-analysis==1.9.3
-diagnostic-common-diagnostics==1.9.3
-diagnostic-updater==1.9.3
-dynamic-reconfigure==1.5.50
-entrypoints==0.3
-epydoc==3.0.1
-gazebo-plugins==2.5.20
-gazebo-ros==2.5.20
-gencpp==0.6.0
-geneus==2.2.6
-genlisp==0.4.16
-genmsg==0.5.11
-gennodejs==2.0.1
-genpy==0.6.14
-geomdl==5.3.0
-gobject==0.1.0
-idna==2.9
-imageio==2.6.1
-importlib-metadata==2.0.0
-interactive-markers==1.11.5
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.14.0
-joint-state-publisher==1.12.15
-joint-state-publisher-gui==1.12.15
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab==2.2.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==1.2.0
-keyring==12.0.2
-keyrings.alt==3.1
-kiwisolver==1.1.0
-laser-geometry==1.6.5
-MarkupSafe==1.1.1
-master-discovery-fkie==0.8.12
-master-sync-fkie==0.8.12
-matplotlib==3.1.1
-message-filters==1.12.16
-mistune==0.8.4
-moveit-commander==0.9.18
-moveit-python==0.3.4
-moveit-ros-planning-interface==0.9.18
-moveit-ros-visualization==0.9.18
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.2
-networkx==2.4
-nmea-navsat-driver==0.5.1
-notebook==6.1.4
-numpy==1.17.2
-NURBS-Python==3.9.0
-opencv-python==4.1.1.26
-packaging==20.4
-pandas==1.0.3
-pandocfilters==1.4.3
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==6.2.1
-pluginlib==1.11.3
-prometheus-client==0.8.0
-prompt-toolkit==3.0.8
-ptyprocess==0.6.0
-pycairo==1.18.2
-PyCapture2==0.0.0
-pycparser==2.20
-Pygments==2.7.2
-PyGObject==3.34.0
-pyparsing==2.4.2
-PyQt5==5.13.2
-PyQt5-sip==12.7.0
-pyrsistent==0.17.3
-python-dateutil==2.8.0
-python-dotenv==0.10.3
-python-qt-binding==0.3.7
-pytz==2019.3
-PyWavelets==1.1.1
-pyzmq==19.0.2
-qt-dotgraph==0.3.17
-qt-gui==0.3.17
-qt-gui-cpp==0.3.17
-qt-gui-py-common==0.3.17
-requests==2.23.0
-resource-retriever==1.12.6
-robot-upstart==0.3.0
-rosbag==1.12.16
-rosboost-cfg==1.14.6
-rosclean==1.14.6
-roscreate==1.14.6
-rosgraph==1.12.16
-roslaunch==1.12.16
-roslib==1.14.6
-roslint==0.11.0
-roslz4==1.12.16
-rosmake==1.14.6
-rosmaster==1.12.16
-rosmsg==1.12.16
-rosnode==1.12.16
-rosparam==1.12.16
-rospy==1.12.16
-rosservice==1.12.16
-rostest==1.12.16
-rostopic==1.12.16
-rosunit==1.14.6
-roswtf==1.12.16
-rqt-action==0.4.9
-rqt-bag==0.4.14
-rqt-bag-plugins==0.4.14
-rqt-console==0.4.9
-rqt-dep==0.4.9
-rqt-graph==0.4.11
-rqt-gui==0.5.0
-rqt-gui-py==0.5.0
-rqt-joint-trajectory-controller==0.13.6
-rqt-launch==0.4.8
-rqt-logger-level==0.4.8
-rqt-moveit==0.5.7
-rqt-msg==0.4.8
-rqt-nav-view==0.5.7
-rqt-plot==0.4.8
-rqt-pose-view==0.5.8
-rqt-publisher==0.4.8
-rqt-py-common==0.5.0
-rqt-py-console==0.4.8
-rqt-reconfigure==0.5.3
-rqt-robot-dashboard==0.5.7
-rqt-robot-monitor==0.5.13
-rqt-robot-steering==0.5.9
-rqt-runtime-monitor==0.5.7
-rqt-rviz==0.5.10
-rqt-service-caller==0.4.8
-rqt-shell==0.4.9
-rqt-srv==0.4.8
-rqt-tf-tree==0.6.0
-rqt-top==0.4.8
-rqt-topic==0.4.11
-rqt-web==0.4.8
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.2.0
-rviz==1.12.17
-scikit-image==0.16.2
-scikit-learn==0.21.3
-scipy==1.3.1
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-sensor-msgs==1.12.7
-six==1.12.0
-smach==2.0.1
-smach-ros==2.0.1
-smclib==1.8.3
-srdfdom==0.4.2
-synapseclient==2.0.0
-terminado==0.9.1
-testpath==0.4.4
-tf==1.11.9
-tf-conversions==1.11.9
-tf2-geometry-msgs==0.5.20
-tf2-kdl==0.5.20
-tf2-py==0.5.20
-tf2-ros==0.5.20
-tf2-sensor-msgs==0.5.20
-tk==0.1.0
-topic-tools==1.12.16
-torch==1.4.0+cpu
-torchvision==0.5.0+cpu
-tornado==6.0.4
-traitlets==5.0.5
-transformations==2019.4.22
-transforms3d==0.3.1
-ur-driver==1.2.7
-ur-kinematics==1.2.7
-urdf-test==1.0.4
-urdfdom-py==0.3.3
-urllib3==1.25.8
-vext==0.7.3
-vext.gi==0.7.0
-wcwidth==0.2.5
-webencodings==0.5.1
-wrapt==1.12.1
-xacro==1.11.3
-xlrd==1.2.0
-XlsxWriter==1.2.7
-zipp==3.4.0
+geomdl
+jsonschema
+numpy
+NURBS-Python
+opencv-python
+pandas
+pandocfilters
+scikit-image
+scikit-learn
+scipy
+xlrd
+XlsxWriter
+matplotlib
