--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
-geomdl
-jsonschema
-numpy
-NURBS-Python
-opencv-python
-pandas
-pandocfilters
-scikit-image
-scikit-learn
-scipy
-xlrd
-XlsxWriter
-matplotlib
+attrs==21.2.0
+cycler==0.10.0
+decorator==4.4.2
+et-xmlfile==1.1.0
+geomdl==5.3.0
+imageio==2.9.0
+joblib==1.0.1
+jsonschema==3.2.0
+kiwisolver==1.3.1
+matplotlib==3.4.2
+networkx==2.5.1
+numpy==1.21.0
+NURBS-Python==3.9.0
+opencv-python==4.5.3.56
+openpyxl==3.0.7
+pandas==1.3.1
+pandocfilters==1.4.3
+Pillow==8.3.1
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+PyWavelets==1.1.1
+scikit-image==0.16.2
+scikit-learn==0.24.2
+scipy==1.7.0
+six==1.16.0
+threadpoolctl==2.2.0
+xlrd==1.2.0
+XlsxWriter==1.2.7
