--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
 PyWavelets==1.1.1
-scikit-image==0.16.2
-scikit-learn==0.24.2
+scikit-image>=0.16.2
+scikit-learn>=0.24.2
 scipy==1.7.0
 six==1.16.0
 threadpoolctl==2.2.0
