--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "shape-sensing"]
 	path = shape-sensing
 	url = https://git.lcsr.jhu.edu/amiro/shape-sensing
+[submodule "prediction_ml"]
+	path = prediction_ml
+	url = https://git.lcsr.jhu.edu/amiro/needle-shape-prediction.git
