Added ROS post-processing, prelim CT work, and matlab helper code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Post-Process ROS Bag Dumps",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/process_ros_results.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--needle-param-file", "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/needle_params_7CH-4AA-0001-MCF-even_needle_params_2023-03-29_Jig-Calibration_best.json",
+                "--data-dir", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/processed_bags/2023-06-15",
+                "--save",
+                "--num-threads", "-1",
+                "--parse-fbg-sensor-data",
+            ]
+        },
+        {
             "name": "Needle Reconstruction Setup",
             "type": "python",
             "request": "launch",
@@ -26,42 +41,60 @@
                 "--force-overwrite",
                 "--save",
                 // "--show-processed",
-
                 "--left-roi",
-                "150", "380", "-220", "-100",
+                "200",
+                "450",
+                "-220",
+                "-100",
                 "--right-roi",
-                "200", "300", "-200", "-350",
-
-                "--left-blackout",
-                "450", "0", "600", "-1",
+                "200",
+                "300",
+                "-200",
+                "-350",
+                // "--left-blackout",
+                // "450", "0", "600", "-1",
                 // "0", "343", "-1", "530",
-                "--right-blackout",
-                "450", "0", "620", "-1",
+                // "--right-blackout",
+                // "450", "0", "620", "-1",
                 // "0", "150", "-1", "330",
-
-                "--subtract-thresh", "35",
-
-                "--left-contrast-enhance",  "2.5", "0",
-                "--right-contrast-enhance", "2.5", "0",
-
-                "--zoom", "2.0",
-                "--window-size", "51", "401",
-
-                "--segmentation-num-connected-components-keep", "2",
-                "--segmentation-bspline-order", "1",
-                "--segmentation-outlier-thresh", "-1",
-                "--segmentation-outlier-scale", "1", "1",
-                "--segmentation-outlier-num-neighbors", "20",
-
-                "--stereomatch-bspline-order", "2",
-                "--stereomatch-tm-score-thresh", "0.5",
-                "--stereomatch-outlier-thresh", "0.05",
-                "--stereomatch-outlier-scale", "100", "0.001",
-                "--stereomatch-outlier-num-neighbors", "35",
+                "--subtract-thresh",
+                "45",
+                "--left-contrast-enhance",
+                "2.0",
+                "0",
+                "--right-contrast-enhance",
+                "2.5",
+                "0",
+                "--zoom",
+                "2.0",
+                "--window-size",
+                "51",
+                "401",
+                "--segmentation-num-connected-components-keep",
+                "1",
+                "--segmentation-bspline-order",
+                "1",
+                "--segmentation-outlier-thresh",
+                "0.1",
+                "--segmentation-outlier-scale",
+                "1",
+                "1",
+                "--segmentation-outlier-num-neighbors",
+                "20",
+                "--stereomatch-bspline-order",
+                "2",
+                "--stereomatch-tm-score-thresh",
+                "0.6",
+                "--stereomatch-outlier-thresh",
+                "0.05",
+                "--stereomatch-outlier-scale",
+                "100",
+                "0.001",
+                "--stereomatch-outlier-num-neighbors",
+                "35",
                 // "--stereomatch-use-roi",
-
                 "${workspaceFolder}/amiro-cv/calibration/Stereo_Camera_Calibration_02-08-2021/6x7_5mm/calibrationSession_params-error_opencv-struct.mat",
-                "${userHome}/data/Jacynthe-Needle/2023-05-25/results"
+                "${userHome}/data/Jacynthe-Needle/2023-05-11/results"
             ]
         }
     ]
