--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,13 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "--needle-param-file", "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/needle_params_7CH-4AA-0001-MCF-even_needle_params_2023-03-29_Jig-Calibration_best.json",
+                "--needle-param-file", 
+                "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/needle_params_7CH-4AA-0001-MCF-even_2023-03-29_Jig-Calibration_all-channels_clinically-relevant-2_weighted_weights.json",
                 "--data-dir", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/processed_bags/2023-06-15",
                 "--save",
+                // "--show-plots",
                 "--num-threads", "0",
-                // "--parse-fbg-sensor-data",
+                "--parse-fbg-sensor-data",
                 "--parse-needle-shape-data",
             ]
         },
