--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
             ]
         },
         {
-            "name": "Needle Reconstruction Setup",
+            "name": "Needle Reconstruction Setup: Stereo",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/amiro-cv/src/needle_segmentation_script.py",
@@ -34,7 +34,7 @@
             ]
         },
         {
-            "name": "Perform Needle Reconstruction",
+            "name": "Perform Needle Reconstruction: Stereo",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/amiro-cv/src/needle_reconstruction.py",
@@ -99,6 +99,23 @@
                 "${workspaceFolder}/amiro-cv/calibration/Stereo_Camera_Calibration_02-08-2021/6x7_5mm/calibrationSession_params-error_opencv-struct.mat",
                 "${userHome}/data/Jacynthe-Needle/2023-05-11/results"
             ]
-        }
+        },
+        {
+            "name": "Perform Needle Reconstruction: CT",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/amiro-cv/src/needle_reconstruction_ct.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--debug-images",
+                "--debug-image-units-in-voxels",
+                // "--show-images",
+                "--save-images",
+                "--options-json", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/ct_reconstruction_options.json",
+                "--odir", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/2023-06-15_09-59-47",
+                "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/2023-06-15_09-59-47/ct_scan.npz"
+            ]
+        },
     ]
 }
