--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -110,11 +110,11 @@
             "args": [
                 "--debug-images",
                 "--debug-image-units-in-voxels",
-                // "--show-images",
-                "--save-images",
-                "--options-json", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/ct_reconstruction_options.json",
-                "--odir", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/2023-06-15_09-59-47",
-                "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-15/2023-06-15_09-59-47/ct_scan.npz"
+                "--show-images",
+                // "--save-images",
+                "--options-json", "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-16/ct_reconstruction_options.json",
+                // "--odir", "$${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-16/2023-06-16_13-53-00",
+                "${userHome}/data/7CH-4AA-0001-MCF-even/2023-06-15_2023-06-16_Beef-Insertion-Experiment/ct_images/mcf-beef-insertion-CT/results/2023-06-16/2023-06-16_13-53-00/ct_scan.npz"
             ]
         },
     ]
