Added stereo analysis and stereo reconst. params

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,17 +45,17 @@
                 // "--save",
                 "--show-processed",
                 // "--insertion-number", "9",
-                // "--insertion-depth", "60", "90",
+                // "--insertion-depth", "120",
                 "--left-roi",
+                "175",
+                "250",
+                "-200",
+                "-350",
+                "--right-roi",
                 "130",
                 "450",
                 "-200",
                 "-100",
-                "--right-roi",
-                "130",
-                "250",
-                "-200",
-                "-350",
                 // "--left-blackout",
                 // "450", "0", "600", "-1",
                 // "0", "343", "-1", "530",
