Updated CV & processing for CT and stereo results

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "args": [
                 "--needle-param-file", 
                 "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/needle_params_7CH-4AA-0001-MCF-even_needle_params_2023-03-29_Jig-Calibration_best-noaa1.json",
-                "--data-dir", "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-04-19_Phantom-Insertion-Experiment/processed_bags/2023-04-19",
+                "--data-dir", "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-08-21_Phantom-Insertion-Deflection-Experiment/processed_bags/in-bevel-direction",
                 "--save",
                 // "--show-plots",
                 "--num-threads", "0",
@@ -23,14 +23,14 @@
             ]
         },
         {
-            "name": "Needle Reconstruction Setup: Stereo",
+            "name": "Setup Needle Reconstruction: Stereo",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/amiro-cv/src/needle_segmentation_script.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-04-19_Phantom-Insertion-Experiment/processed_bags/2023-04-19/Insertion9/30.0/right.png"
+                "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-08-21_Phantom-Insertion-Deflection-Experiment/processed_bags/in-bevel-direction/Insertion2/125.0/left.png"
             ]
         },
         {
@@ -42,30 +42,22 @@
             "justMyCode": true,
             "args": [
                 "--force-overwrite",
-                // "--save",
-                "--show-processed",
-                // "--insertion-number", "9",
-                // "--insertion-depth", "120",
+                "--save",
+                // "--show-processed",
+                "--insertion-number", "5",
+                "--insertion-depth", "45",
                 "--left-roi",
-                "175",
-                "250",
-                "-200",
-                "-350",
+                "160", "240", "875", "1000",
                 "--right-roi",
-                "130",
-                "450",
-                "-200",
-                "-100",
-                // "--left-blackout",
-                // "450", "0", "600", "-1",
-                // "0", "343", "-1", "530",
-                // "--right-blackout",
-                // "450", "0", "620", "-1",
-                // "0", "150", "-1", "330",
+                "180", "450", "880", "1200",
+                "--left-blackout",
+                "280", "0", "370", "-1",
+                "--right-blackout",
+                "280", "0", "340", "-1",
                 "--subtract-thresh",
-                "45",
+                "40",
                 "--left-contrast-enhance",
-                "2.0",
+                "2.5",
                 "0",
                 "--right-contrast-enhance",
                 "2.5",
@@ -73,12 +65,12 @@
                 "--zoom",
                 "2.0",
                 "--window-size",
-                "101",
+                "301",
                 "301",
                 "--segmentation-num-connected-components-keep",
-                "1",
+                "2",
                 "--segmentation-bspline-order",
-                "1",
+                "-1",
                 "--segmentation-outlier-thresh",
                 "-1",
                 "--segmentation-outlier-scale",
@@ -87,11 +79,11 @@
                 "--segmentation-outlier-num-neighbors",
                 "20",
                 "--stereomatch-bspline-order",
-                "2",
+                "-2",
                 "--stereomatch-tm-score-thresh",
                 "-1",
                 "--stereomatch-outlier-thresh",
-                "0.05",
+                "0.07",
                 "--stereomatch-outlier-scale",
                 "100",
                 "0.001",
@@ -99,7 +91,7 @@
                 "35",
                 // "--stereomatch-use-roi",
                 "${workspaceFolder}/amiro-cv/calibration/Stereo_Camera_Calibration_02-08-2021/6x7_5mm/calibrationSession_params-error_opencv-struct.mat",
-                "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-04-19_Phantom-Insertion-Experiment/processed_bags/2023-04-19"
+                "${workspaceFolder}/data/7CH-4AA-0001-MCF-even/2023-08-21_Phantom-Insertion-Deflection-Experiment/processed_bags/in-bevel-direction"
             ]
         },
         {
