--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,16 +44,16 @@
                 "--force-overwrite",
                 "--save",
                 // "--show-processed",
-                "--insertion-number", "5",
-                "--insertion-depth", "45",
+                "--insertion-number", "4",
+                "--insertion-depth", "45", "65", "95", "125",
                 "--left-roi",
                 "160", "240", "875", "1000",
                 "--right-roi",
                 "180", "450", "880", "1200",
-                "--left-blackout",
-                "280", "0", "370", "-1",
-                "--right-blackout",
-                "280", "0", "340", "-1",
+                // "--left-blackout",
+                // "280", "0", "370", "-1",
+                // "--right-blackout",
+                // "280", "0", "340", "-1",
                 "--subtract-thresh",
                 "40",
                 "--left-contrast-enhance",
@@ -63,12 +63,12 @@
                 "2.5",
                 "0",
                 "--zoom",
-                "2.0",
+                "2.5",
                 "--window-size",
-                "301",
-                "301",
+                "301", // x
+                "301", // y
                 "--segmentation-num-connected-components-keep",
-                "2",
+                "1",
                 "--segmentation-bspline-order",
                 "-1",
                 "--segmentation-outlier-thresh",
@@ -78,12 +78,13 @@
                 "1",
                 "--segmentation-outlier-num-neighbors",
                 "20",
+                "--stereomatch-image-blend-alpha", "0.2",
                 "--stereomatch-bspline-order",
-                "-2",
+                "2",
                 "--stereomatch-tm-score-thresh",
-                "-1",
+                "0.5",
                 "--stereomatch-outlier-thresh",
-                "0.07",
+                "-0.001",
                 "--stereomatch-outlier-scale",
                 "100",
                 "0.001",
